--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,27 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
+                android:text="ID User:"
+                android:gravity="center"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:layout_weight="2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/iduser1"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:layout_weight="3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <LinearLayout
+            android:weightSum="5"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
                 android:text="Title:"
                 android:gravity="center"
                 android:textSize="20dp"
@@ -65,7 +86,7 @@
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:layout_weight="3"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
         <LinearLayout
@@ -86,7 +107,7 @@
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:layout_weight="3"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
     </LinearLayout>
